--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,127 @@
-/* delete-item-confirm */
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
 
-.deleteBTN {
-	width: 100px;
-	background-color: rgba(0, 0, 0, 0.486);
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	list-style: none;
+	font-family: "Montserrat", sans-serif;
 }
 
-/* delete-item-confirm */
+body {
+	background-color: #b064f7;
+	line-height: 1rem;
+	font-size: 14px;
+	padding: 10px;
+}
+
+#nav-mobile,
+#nav-mobile-fixed {
+	display: none;
+}
+
+.container {
+	border-top-left-radius: 25px;
+	border-top-right-radius: 25px;
+	border-bottom-left-radius: 25px;
+	border-bottom-right-radius: 25px;
+	background-color: #eee;
+	max-width: 75%;
+	/* margin-top: 70px; */
+}
+
+.navbar-brand {
+	text-transform: uppercase;
+	font-size: 14px;
+	font-weight: 800;
+}
+
+small {
+	font-size: 12px;
+}
+
+.icon {
+	background-color: #eee;
+	width: 40px;
+	height: 40px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 50%;
+}
+
+.pic {
+	height: 70px;
+	width: 100px;
+	border-radius: 5px;
+}
+
+td {
+	vertical-align: middle;
+}
+
+.b-bottom {
+	border-bottom: 2px dotted black;
+	padding-bottom: 20px;
+}
+
+p {
+	margin: 0px;
+}
+
+table input {
+	width: 50px;
+	border: 1px solid #eee;
+}
+
+input:focus {
+	border: 1px solid #eee;
+	outline: none;
+}
+
+.round {
+	background-color: #eee;
+	height: 40px;
+	width: 40px;
+	border-radius: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.payment-summary .unregistered {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #eee;
+	text-transform: uppercase;
+	font-size: 14px;
+}
+
+.payment-summary input {
+	width: 100%;
+	margin-right: 20px;
+}
+
+.payment-summary .sale {
+	width: 100%;
+	background-color: #e9b3b3;
+	text-transform: uppercase;
+	font-size: 12px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 5px 0;
+}
+
+@media screen and (max-width: 767px) {
+	#nav-lg {
+		display: none;
+	}
+
+	#nav-mobile,
+	#nav-mobile-fixed {
+		display: flex;
+	}
+}
